feat: implement getusersbygroupID; fix, change a bunch of ther things
